10. Internal: Several code shuffles to support the new multi-hosts stuff.
11. New MUDGrinder Editor: Common Skill Recipes (new security code: CMDRECIPES)
12. METACRAFT command can now have its creations be targeted.
13. New CLAN type: FAMILY
14. Apprentices may not go beyond level 5 (by default)
15. Character Classes can now have a level cap specified.
16. New Thief skills: Disassemble traps, Improved Caltrops, Slick Caltrops
17. Factions can now have auto-applies affects/behaviors (auto-aggressive mobs based on faction, anyone?)
18. Players now have their followers listed on the web page
19. New resource: lists.ini, and ini entry LISTFILE for various combat, exp, and other modifiable settings.
20. Internal: lots of new Libraries/ created out of disparate code, to support feature #1.
21. New LIST type: helpfilerequests, for parsing help-file misses (if you are recording them).
22. New INI entries: CHARSETINPUT, CHARSETOUTPUT for manipulating default IO char sets.
23. In the works: random area/room/mob/item/etc generator.  GENERATE command is disabled atm. 
24. New WebMacro ThinPlayerData created to make the Players MUDGrinder lister go faster.
25. Food types now have BITE field to designate how many times EAT can be used against it.
26. LOTS more skills/spells/etc have their castingQuality methods set: casting mobs just got smarter!
27. Children will now be tattooed with their parentage.
28. Internal: Lots of javadoc comments added.
29. Internal: Scriptable reworked to do run-time parse caching to increase speed significantly.
30. New Zappermask: QUESTWIN
31. Term of old bugs has expired.  New bugs set to take office early next year.
# Build 5.5.1 Released November 13, 2008 
1. couple of bug fixes in the new features
# Build 5.5.2 Release ?
1. Journal Show All Messages allows batch processing now
2. I3 will now properly respond to chan-user-req, and has a new default server in the ini
3. trailto supports nohomes flag now.
