@@ -141,7 +141,7 @@ public class Druid_MyPlants extends StdAbility
 						{
 							yourPlants.append(CMStrings.padRight(""+(++plantNum),3)+" ");
 							yourPlants.append(CMStrings.padRight(I.name(),20)+" ");
-							yourPlants.append(CMStrings.padRight(R.roomTitle(),40));
+							yourPlants.append(CMStrings.padRight(R.roomTitle(mob),40));
 							yourPlants.append("\n\r");
 							I=myPlant(R,mob,++i);
 						}
