@@ -107,7 +107,7 @@ public class Prayer_InfuseBalance extends Prayer
                 R=(Room)e.nextElement();
                 if(CMLib.law().getClericInfused((Room)target)==D)
                 {
-                    mob.tell("There is already a balanced place of "+D.Name()+" in this area at "+R.roomTitle()+".");
+                    mob.tell("There is already a balanced place of "+D.Name()+" in this area at "+R.roomTitle(mob)+".");
                     return false;
                 }
             }
