@@ -146,7 +146,7 @@ public class Spell_KnowOrigin extends Spell
 			if(mob.location().okMessage(mob,msg))
 			{
 				mob.location().send(mob,msg);
-				mob.tell(target.name()+" seems to come from '"+R.roomTitle()+"'.");
+				mob.tell(target.name()+" seems to come from '"+R.roomTitle(mob)+"'.");
 			}
 		}
 		else
