@@ -2307,8 +2307,9 @@ highest level, the players own class, and all skills/expertises.
 
 WIMPY=\
 Command : WIMPY\n\r\
-Usage   : WIMPY [HIT POINT LEVEL]\n\r\
+Usage   : WIMPY [HIT POINTS]/[PCT]\n\r\
 Example : wimpy 5\n\r\
+Example : wimpy 15%\n\r\
 Short(s): \n\r\
 Sets the minimum number of hit points your character must have \
 in order for you to remain in a fight.  Should your character \
