@@ -2136,4 +2136,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 1. Journal Show All Messages allows batch processing now
 2. I3 will now properly respond to chan-user-req, and has a new default server in the ini
 3. trailto supports nohomes flag now.
-
+4. Crafting Expertises are no longer such a hideous hit on the time required
+5. Wimpy can now accept a percentage of hit points as an argument
